# starter-template

./: .gitignore  README.md  cookiecutter.json  justfile  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py  dependency.rst  deploy.rst  index.rst  issues.rst  packages.rst  structure.rst
docs/_static/snippets/: tree-1.txt  tree-2.txt  tree-3.txt
{{ cookiecutter.project_name }}/: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml  tailwind.config.js
{{ cookiecutter.project_name }}/.github/workflows/: cd.yml  ci.yml
{{ cookiecutter.project_name }}/deploy/: Dockerfile  Dockerfile.binary  fabfile.py  fabric.py
{{ cookiecutter.project_name }}/deploy/etc/nginx/sites-available/: {{ cookiecutter.project_name }}
{{ cookiecutter.project_name }}/deploy/etc/s6-overlay/s6-rc.d/server/: run
{{ cookiecutter.project_name }}/deploy/etc/s6-overlay/s6-rc.d/setup/: up
{{ cookiecutter.project_name }}/deploy/etc/s6-overlay/s6-rc.d/worker/: run
{{ cookiecutter.project_name }}/deploy/etc/s6-overlay/s6-rc.d/workers/: run
{{ cookiecutter.project_name }}/deploy/etc/s6-overlay/scripts/: setup.sh
{{ cookiecutter.project_name }}/deploy/etc/systemd/system/: {{ cookiecutter.project_name }}.service  {{ cookiecutter.project_name }}.socket
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/: __init__.py  __main__.py  apps.py  gunicorn.conf.py  settings.py  urls.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/core/: views.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/core/management/commands/: prodserver.py  setup.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/management/commands/: setup.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/templates/: base.html  base_email.html  robots.txt
